kubernetes/ingress/demo9/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: hello-deploy
  labels:
    app: docker-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-jenkins
  template:
    metadata:
      labels:
        app: docker-jenkins
    spec:
      containers:
      - name: docker-jenkins
        image: hhssaaffii/docker-jenkins:35
        ports:
        - containerPort: 8070
